# jarvis-desktop

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  config.py  logging_config.py  main.py
backend/app/core/: agent.py  memory.py  registry.py  router.py  schemas.py
backend/app/plugins/: __init__.py  example_plugin.py.example
backend/app/routers/: chat.py  stt.py  system.py  tasks.py  tools.py
backend/app/services/: openai_client.py  whisper.py
backend/app/tools/: __init__.py  app_launcher.py  base.py  browser.py  file_summarizer.py  system_info.py  task_memory.py
backend/tests/: conftest.py  test_app.py  test_registry.py  test_router.py  test_task_store.py
frontend/: .dockerignore  .eslintrc.cjs  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: Composer.tsx  ConversationView.tsx  MessageBubble.tsx  MicButton.tsx  StatusPanel.tsx  TaskList.tsx
frontend/src/hooks/: useChat.ts  useRecorder.ts  useStatus.ts  useTasks.ts
frontend/src/lib/: api.ts  types.ts
frontend/src/styles/: index.css
