[project]
name = "jarvis-backend"
version = "0.1.0"
description = "Jarvis desktop assistant backend"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Ady Wakes" }]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.4.0",
    "python-multipart>=0.0.9",
    "openai>=1.40.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "playwright>=1.45.0",
    "pypdf>=4.3.0",
    "python-docx>=1.1.2",
    "psutil>=5.9.8",
    "structlog>=24.1.0",
    "websockets>=12.0",
    "anyio>=4.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "httpx>=0.27.0",
    "types-psutil>=5.9.5.20240516",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "ASYNC",
    "C4",
    "SIM",
    "RUF",
]
ignore = [
    "E501",     # line too long (handled by formatter)
    "B008",     # FastAPI Depends() default
    "ASYNC240", # pathlib in async fns (short ops only, acceptable here)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
exclude = ["tests/", "build/", "\\.venv/"]
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["app.tools.*"]
disable_error_code = ["override"]

[[tool.mypy.overrides]]
module = ["pypdf.*", "docx.*", "psutil.*", "playwright.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q"
